# ConvexHulk

./: CMakeLists.txt  Makefile  README.md  main.cpp
lib/: Point.h  Polygon.h  Vertex.h  convexHulk.h  sfmlHelpers.h
tests/: PointTests.cpp  PolygonTests.cpp  VertexTests.cpp  convexHulkTests.cpp
